# specai

./: .gitignore  Cargo.toml  Contributing  README.md  architecture  examples  integration  main  proposal  rust  security.md
